--- a/ShoppingCart/ShoppingCart.csproj
+++ b/ShoppingCart/ShoppingCart.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Models\Data\UserRolesDTO.cs" />
     <Compile Include="Models\ViewModels\Account\LoginUserVM.cs" />
     <Compile Include="Models\ViewModels\Account\NavbarUserPartialVM.cs" />
+    <Compile Include="Models\ViewModels\Account\UserProfileVM.cs" />
     <Compile Include="Models\ViewModels\Account\UserVM.cs" />
     <Compile Include="Models\Data\CategoriesDTO.cs" />
     <Compile Include="Models\Data\PageDTO.cs" />
@@ -924,6 +925,7 @@
     <Content Include="Views\Account\CreateAccount.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\UserPartialNav.cshtml" />
+    <Content Include="Views\Account\UserProfile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Admin\Models\" />
