--- a/ShoppingCart/ShoppingCart.csproj
+++ b/ShoppingCart/ShoppingCart.csproj
@@ -171,6 +171,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Data\OrderDetailsDTO.cs" />
+    <Compile Include="Models\Data\OrdersDTO.cs" />
     <Compile Include="Models\Data\RolesDTO.cs" />
     <Compile Include="Models\Data\UserRolesDTO.cs" />
     <Compile Include="Models\ViewModels\Account\LoginUserVM.cs" />
@@ -926,6 +928,7 @@
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\UserPartialNav.cshtml" />
     <Content Include="Views\Account\UserProfile.cshtml" />
+    <Content Include="Views\Cart\PaypalPartialView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Admin\Models\" />
