--- a/ShoppingCart/fileman/web.config
+++ b/ShoppingCart/fileman/web.config
@@ -20,5 +20,9 @@
     </compilation>
     <httpRuntime targetFramework="4.5" />
     <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID" />
+    <authorization>
+      <allow roles="admin"/>
+      <deny users="*"/>
+    </authorization>
   </system.web>
 </configuration>
